new_tests/semantics/scope/bad/025_FD2.cm

class A<discr t> {
    protected t:Int 
}
